--- a/.htaccess
+++ b/.htaccess
@@ -8,4 +8,5 @@ AddCharset UTF-8 .html .css .php .txt .js .json
 
 <ifmodule mod_deflate.c>
  AddOutputFilterByType DEFLATE text/html text/plain text/xml text/css text/javascript application/javascript application/json
+ AddOutputFilter DEFLATE log
 </ifmodule>
